# lc-countour

./: CMakeLists.txt
src/: CMakeLists.txt  main.cpp  test.cpp
src/include/: approximator.hpp  boundary_conditions.hpp  thomas_solver.hpp  tridiagonal_matrix.hpp
